--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1294,8 +1294,8 @@
 		-ms-flex-direction: column;
 		flex-direction: column;
 		padding: 8em 0 6em 0;
-		background:url("https://images.unsplash.com/photo-1574170623066-9ec82b5f1a53?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=890&q=80.jpg");
-		/* background:url("css/imagens/foto1.jpg"); */
+		/* background:url("https://images.unsplash.com/photo-1574170623066-9ec82b5f1a53?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=890&q=80.jpg"); */
+		background-color:#808080;
 		background-size: cover;
 		background-position: center;
 		background-attachment: fixed;
